...
                              focusedLabelColor = AppColors.textIconsFade,
                              unfocusedContainerColor = Color.Transparent,
                              focusedContainerColor = Color.Transparent),
                  textStyle = MaterialTheme.typography.bodySmall,
                  onValueChange = { title = it },
                  label = { Text("Title") },
                  modifier = Modifier.testTag("Add Title").fillMaxWidth())

              Spacer(modifier = Modifier.height(12.dp))

              /** Description input field */
              OutlinedTextField(
                  value = description,
...
                              focusedLabelColor = AppColors.textIconsFade,
                              unfocusedContainerColor = Color.Transparent,
                              focusedContainerColor = Color.Transparent),
                  textStyle = MaterialTheme.typography.bodySmall,
                  onValueChange = { description = it },
                  label = { Text("Description (optional)") },
                  modifier = Modifier.testTag("Add Description").fillMaxWidth().height(150.dp))

              Spacer(modifier = Modifier.height(16.dp))

              /** Row for search and member selection */
              MemberSearchField(
                  searchQuery = searchQuery,
...
    onSelect: (Account) -> Unit
) {
  ExposedDropdownMenuBox(expanded = dropdownExpanded, onExpandedChange = {}) {
    OutlinedTextField(
        value = searchQuery,
        onValueChange = { onQueryChange(it) },
        label = { Text("Add Members") },
        modifier =
            Modifier.menuAnchor(type = MenuAnchorType.PrimaryEditable, enabled = true)
                .fillMaxWidth()
                .testTag("Add Members"),
        trailingIcon = {
          if (searchQuery.isNotBlank()) {
...
      when {
        isSearching -> DropdownMenuItem(text = { Text("Searching...") }, onClick = {})
        searchResults.isEmpty() -> DropdownMenuItem(text = { Text("No results") }, onClick = {})
        else ->
            searchResults.forEach { account ->
              DropdownMenuItem(
                  modifier = Modifier.testTag("Add Member Element"),
                  text = { Text(account.handle) },
                  onClick = {
                    onSelect(account)
                    onDismiss()
                  })
            }
...
